--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,8 @@ for<br>
 <p>For a more in depth overview of the subsystem and to access associated files with it, review the <a href="https://alazaritt.github.io/04-Schematic/schematic/">Schematic</a> section of the datasheet.</p>
 <p>To see how power was taken into consideration and a calulated current draw of all components within the system, see the <a href="https://alazaritt.github.io/05-Power-Budget/Power-Budget/">Power Budget</a> section of the datasheet.</p>
 <p>The fully developed PCB of this subsystem can be found in the <a href="https://alazaritt.github.io/06-PCB-Design/PCB-Design/">PCB Design</a> section of the datasheet.</p>
-<p>The code that wwas used to run the subsytem can be found in the <a href="https://alazaritt.github.io/07-Microcontroller-Code/code/">Microcontroller Code</a> part of the datasheet.</p>
+<p>The code that wwas used to run the subsytem can be found in the <a href="https://alazaritt.github.io/07-Resources/Resources/">Resources</a> part of the datasheet.</p>
+<p>Ideas of hardware improvements and adjustments are documented under <a href="https://alazaritt.github.io/08-Hardware-V2.0/Hardware%20V2.0/">Hardware V2.0</a></p>
 
 
 
