deploy: 51b328831e35a4eedac1e60ce7e557d6915f46ff

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1054,7 +1054,7 @@
 <p><strong>Choice:</strong> Option 3: L7805CV voltage regulator</p>
 <p><strong>Rationale:</strong> This one is ideal, as it offers a fixed 5 V output with up to ~1.5 A of current, built‑in protection, and ease of use with minimal external components. Its reliability and tolerance to voltage variations make it a safe, straightforward choice as there’s enough headroom voltage to dissipate heat.</p>
 <p><em>Table 4: Component selection (button/switch)</em></p>
-<p><strong>Button/switch</strong></p>
+<p><strong>External Power Supply</strong></p>
 <table>
 <thead>
 <tr>
@@ -1065,26 +1065,26 @@
 </thead>
 <tbody>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg"></a><br>Option 1.<br> SLW-1276864-4A-D slide switch <br>$0.83/each<br><a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/SLW-1276864-4A-D/21259972?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUogdHyGewqv60Zaberelrh0tdkJGfGpT9-0Czo_POhdVcJfAG18uRhoCAyYQAvD_BwE&amp;gclsrc=aw.ds">link to product</a></td>
-<td>* Good for low power loads<br>* Raised actuator <br>* Moderate mechanical lifespan</td>
-<td>* Limited switching cycles <br>* On-on signal may cause shorts</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg"></a><br>Option 1.<br> WR9HD1333CCP-F(R6B) (V Power Supply <br>$0.83/each<br><a href="http://digikey.com/en/products/detail/globtek-inc/WR9HD1333CCP-F(R6B)/13245472?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XDCIccQXBKXO9Xae1sWETsOyjtnmOLRt1nxLLyYAz2bQOsTiH3w7hhoCo0AQAvD_BwE">link to product</a></td>
+<td>* Wide input voltage range<br>* Sufficient voltage for small circuits <br>* Operates efficiently and consistently</td>
+<td>* Fixed barrel plug and polarity may limit compatibility <br>* May have operating temperature restrictions</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg"></a><br>* Option 2. <br>* TS02-66-43-BK-260-LCR-D button <br>* $0.10/each <br>* <a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/TS02-66-43-BK-260-LCR-D/15634346?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUjayaYvLXFGwod0w6Z9rmtI8A7dB_Ue2x6Pz7yvasxVuSKlQZcvzBhoCz0cQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
-<td>* Minimal voltage drop when switch is closed <br>* High mechanical life <br> * Wide tempe range for use</td>
-<td>* Low current rating <br>* More force required to operate it <br>* Not sealed from dust or moisture</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg"></a><br>* Option 2. <br>* DCU120050D4740 12V power supply <br>* $0.10/each <br>* <a href="https://www.digikey.com/en/products/detail/jameco-reliapro/DCU120050D4740/25966493?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XMIr1HiwdeUjFCkA2YSm7CzZHr0R3VAAe2WT0fHnovfo6hBdBaTLCRoCLroQAvD_BwE">Link to product</a></td>
+<td>* More compact design <br>* Constant voltage supply <br> * Low cost</td>
+<td>* Unregulated current output <br>* Low output current</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* 418117270901 switch <br>* $0.85/each <br> <a href="https://www.digikey.com/en/products/detail/w-rth-elektronik/418117270901/3174480?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUlbHgzLF46IocoMOaw_awmely5ZupR1lnszwMFjaSwBDW9xo05XZuRoCbAgQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
-<td>* Lower voltage required <br>* More compact <br> * Low corrosion</td>
-<td>* Single pole <br>* Cant handle high voltage</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* BestCH 9V 3.0A AC Adapter <br>* $0.85/each <br> <a href="https://www.amazon.com/gp/product/B09ZTKTLGW/">Link to product</a></td>
+<td>* Stable and reliable output <br>* Automatic overload cut off <br> * No voltage fluctuations at power on</td>
+<td>* Higher heat output <br>* Cant handle high voltage</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 2: TS02-66-43-BK-260-LCR-D button</p>
-<p><strong>Rationale:</strong> The button was chosen for its compactness and user friendliness. With a 50 mA current rating and 12 VDC voltage rating, it is appropriate for low-power control circuits. The switch's 60,000-cycle mechanical life ensures durability for typical user interactions. </p>
+<p><strong>Choice:</strong> Option 3: BestCH 9V 3.0A AC Adapter</p>
+<p><strong>Rationale:</strong> This power supply offers a clean, stable output with built-in overload protection, making it safer for sensitive electronics. Its smooth power-on behavior helps prevent voltage spikes that can damage circuits or cause unpredictable startup issues. Overall, it provides a good balance of reliability, protection features, and convenience. </p>
 <p><strong>Overall Rationale:</strong> Each component was chosen through an evaluation of performance, cost, and compatibility with the system’s low-power and compact design requirements. The MCP6004-I/P op-amp was chosen for its low power consumption, high signal range, and stable signal amplification. This makes it ideal for accurate signal processing while keeping cost and complexity low. The CMA-4544PF-W microphone provides a wide frequency range and high signal-to-noise ratio, ensuring clear and reliable sound detection while remaining compact enough to fulfill project requirements.</p>
-<p>To maintain stable operation, the L7805CV voltage regulator was selected for its reliable 5 V output, built-in protection features, and simplicity, making it optimal for low-power circuitry. Finally, the TS02-66-43-BK-260-LCR-D button offers durability, small size, and suitable electrical ratings for low-voltage control inputs. Together, these components meet the product’s requirements for efficiency, reliability, and cost-effectiveness, ensuring consistent performance within the intended conditions.</p>
+<p>To maintain stable operation, the L7805CV voltage regulator was selected for its reliable 5 V output, built-in protection features, and simplicity, making it optimal for low-power circuitry. Finally, the BestCH 9V 3.0A AC Adapter provides a safe and stable option for powering the board, offering built in protections against voltage spikes as well as regualted voltage outputs for the circuit</p>
 <p><em>Table 4: Final Components Selected (summary)</em></p>
 <table>
 <thead>
@@ -1116,6 +1116,7 @@
 </tr>
 </tbody>
 </table>
+<p>PowerSupply | BestCH/EA10302 | Provides 9V and 3A of power to the circuit | It integrates lots of safety features to protect the circuit, ensuring that the correct amount of voltage and current runs through it at all times.|</p>
 <p><em>Table 5: MCC Pinout</em></p>
 <table>
 <thead>
