deploy: ad5b0ceb219a4ddf4552605051079df468a0a381

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1075,7 +1075,7 @@
 <td>* Unregulated current output <br>* Low output current</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* BestCH 9V 3.0A AC Adapter <br>* $0.85/each <br> <a href="https://www.amazon.com/gp/product/B09ZTKTLGW/">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg" data-desc-position="bottom"><img alt="" src="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg"></a><br>* Option 3. <br>* BestCH 9V 3.0A AC Adapter <br>* $0.85/each <br> <a href="https://www.amazon.com/gp/product/B09ZTKTLGW/">Link to product</a></td>
 <td>* Stable and reliable output <br>* Automatic overload cut off <br> * No voltage fluctuations at power on</td>
 <td>* Higher heat output <br>* Cant handle high voltage</td>
 </tr>
