deploy: 86bb7dae7c2f8492cd76188e7941fc0f1928e608

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1065,17 +1065,17 @@
 </thead>
 <tbody>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg"></a><br>Option 1.<br> WR9HD1333CCP-F(R6B) (V Power Supply <br>$0.83/each<br><a href="http://digikey.com/en/products/detail/globtek-inc/WR9HD1333CCP-F(R6B)/13245472?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XDCIccQXBKXO9Xae1sWETsOyjtnmOLRt1nxLLyYAz2bQOsTiH3w7hhoCo0AQAvD_BwE">link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/083/564/WR9HD1333CCP-F%28R6B%29_sml.jpg"></a><br>Option 1.<br> WR9HD1333CCP-F(R6B) (V Power Supply <br>$6.23/each<br><a href="http://digikey.com/en/products/detail/globtek-inc/WR9HD1333CCP-F(R6B)/13245472?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XDCIccQXBKXO9Xae1sWETsOyjtnmOLRt1nxLLyYAz2bQOsTiH3w7hhoCo0AQAvD_BwE">link to product</a></td>
 <td>* Wide input voltage range<br>* Sufficient voltage for small circuits <br>* Operates efficiently and consistently</td>
 <td>* Fixed barrel plug and polarity may limit compatibility <br>* May have operating temperature restrictions</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg"></a><br>* Option 2. <br>* DCU120050D4740 12V power supply <br>* $0.10/each <br>* <a href="https://www.digikey.com/en/products/detail/jameco-reliapro/DCU120050D4740/25966493?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XMIr1HiwdeUjFCkA2YSm7CzZHr0R3VAAe2WT0fHnovfo6hBdBaTLCRoCLroQAvD_BwE">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/008/949/MFG_DCU120050D4740_sml%28200x200%29.jpg"></a><br>* Option 2. <br>* DCU120050D4740 12V power supply <br>* $7.65/each <br> <a href="https://www.digikey.com/en/products/detail/jameco-reliapro/DCU120050D4740/25966493?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliAWNAe3kc2ZQhIbakXEpBWA&amp;gclid=CjwKCAiAxc_JBhA2EiwAFVs7XMIr1HiwdeUjFCkA2YSm7CzZHr0R3VAAe2WT0fHnovfo6hBdBaTLCRoCLroQAvD_BwE">Link to product</a></td>
 <td>* More compact design <br>* Constant voltage supply <br> * Low cost</td>
 <td>* Unregulated current output <br>* Low output current</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg" data-desc-position="bottom"><img alt="" src="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg"></a><br>* Option 3. <br>* BestCH 9V 3.0A AC Adapter <br>* $0.85/each <br> <a href="https://www.amazon.com/gp/product/B09ZTKTLGW/">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg" data-desc-position="bottom"><img alt="" src="https://m.media-amazon.com/images/I/31UE8SX03rS._AC_.jpg"></a><br>* Option 3. <br>* BestCH 9V 3.0A AC Adapter <br>* $4.52/each <br> <a href="https://www.amazon.com/gp/product/B09ZTKTLGW/">Link to product</a></td>
 <td>* Stable and reliable output <br>* Automatic overload cut off <br> * No voltage fluctuations at power on</td>
 <td>* Higher heat output <br>* Cant handle high voltage</td>
 </tr>
@@ -1114,9 +1114,14 @@
 <td style="text-align: left;">To ensure that only 5V of power runs through the circuit</td>
 <td style="text-align: left;">It allows for a fixed 5 V output with up to ~1.5 A of current. Its reliability and tolerance to voltage variations ensure safety, as there’s enough headroom voltage to dissipate heat.</td>
 </tr>
+<tr>
+<td style="text-align: left;">PowerSupply</td>
+<td style="text-align: left;">BestCH/EA10302</td>
+<td style="text-align: left;">Provides 9V and 3A of power to the circuit</td>
+<td style="text-align: left;">It integrates lots of safety features to protect the circuit, ensuring that the correct amount of voltage and current runs through it at all times.</td>
+</tr>
 </tbody>
 </table>
-<p>PowerSupply | BestCH/EA10302 | Provides 9V and 3A of power to the circuit | It integrates lots of safety features to protect the circuit, ensuring that the correct amount of voltage and current runs through it at all times.|</p>
 <p><em>Table 5: MCC Pinout</em></p>
 <table>
 <thead>
