deploy: adeec7502906f497b25b7a0229d4d7aaae47ecbb

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -1247,21 +1247,21 @@
 <td style="text-align: left;">R8</td>
 </tr>
 <tr>
-<td style="text-align: left;">5k ohm resistor</td>
+<td style="text-align: left;">10k potentiometer</td>
 <td style="text-align: left;">1</td>
 <td style="text-align: left;">0.10</td>
 <td style="text-align: left;">$0.10</td>
-<td style="text-align: left;">YAGEO</td>
-<td style="text-align: left;">MFR-25FTF52-5k</td>
+<td style="text-align: left;">Bourns Inc.</td>
+<td style="text-align: left;">PDB181-K420F-103B</td>
 <td style="text-align: left;">PRLTA 109</td>
 <td style="text-align: left;">n/a</td>
-<td style="text-align: left;">R10</td>
+<td style="text-align: left;">RV1</td>
 </tr>
 <tr>
 <td style="text-align: left;">Push button switch</td>
 <td style="text-align: left;">1</td>
-<td style="text-align: left;">0.10</td>
-<td style="text-align: left;">$0.10</td>
+<td style="text-align: left;">1.30</td>
+<td style="text-align: left;">$1.30</td>
 <td style="text-align: left;">Same Sky</td>
 <td style="text-align: left;">TS02-66-43-BK-260-LCR-D</td>
 <td style="text-align: left;">PRLTA 109</td>
